--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-numpy
-matplotlib
-seaborn
-streamlit
-scikit-learn
-pickle
+matplotlib==3.4.3
+numpy==1.21.2
+pandas==1.3.4
+prophet==1.0.1
+scikit_learn==1.0.1
+seaborn==0.11.2
+
