--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+pystan==2.19.1.1
+fbprophet
 matplotlib==3.4.3
 numpy==1.21.2
 pandas==1.3.4
 gcc7
 plotly
-pystan==2.19.1.1
-prophet==1.0.1
 scikit_learn==1.0.1
 seaborn==0.11.2
 
