--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-pystan==2.19.1.1
-cmdstanpy==0.9.68
-prophet
-matplotlib==3.4.3
-numpy==1.21.2
+matplotlib==3.5.0
+numpy==1.21.4
 pandas==1.3.4
-gcc7
-plotly
+plotly==5.4.0
 scikit_learn==1.0.1
 seaborn==0.11.2
-
-
+statsmodels==0.13.1
+streamlit==1.2.0
